--- a/q/23.html
+++ b/q/23.html
@@ -6,6 +6,7 @@
 <meta http-equiv="X-UA-Compatible" content="IE=edge">
 <meta name="renderer" content="webkit">
 <title>New Embroidered Fabric Sticker Emblem Lace High end Exquisite Rose Series Trend-Flower-Arts, Crafts &amp; Sewing-zlalaa</title>
+<meta name="keywords" content="Embroidery stickers,Embroidery,cross-stitch,needlework,needlepoint,fancywork">
 <meta name="description" content="New Embroidered Fabric Sticker Emblem Lace High end Exquisite Rose Series Trend">
 <meta name="theme-color" content="#32CD32">
 <meta property="og:type" content="product"/>
@@ -20,10 +21,10 @@
 </head>
 <body>
 <div class="navbar shadow" id="navbar">
-  <a class="navbar-logo size-big" href="https://zalalaa.com"><img src="/q/logo.webp" alt="Arts, Crafts &amp; Sewing" height="40" class="margin" />Zalalaa.com</a>
+  <a class="navbar-logo size-big" href="/"><img src="/q/logo.webp" alt="Arts, Crafts &amp; Sewing" height="40" class="margin" />Zalalaa.com</a>
   <div class="navbar-body" id="navbody">
     <ul class="nav">
-      <li><a href="https://zalalaa.com" title="Home">Home</a></li>
+      <li><a href="/" title="Home">Home</a></li>
       <li><a href="/q/abouts/" title="About Us">About Us</a></li>
       <li><a href="/q/patches/" title="Applique Patches">Applique Patches</a></li>
       <li><a href="/q/article/" title="Blog">Blog</a></li>
@@ -175,7 +176,7 @@
     </div>
   
 <div class="layout padding-top-large padding-bottom-large padding-left padding-right">
-  <p class="size-small text-gray flex-grow">2024 Zalalaa.Com</p>
+ <p class="size-small text-gray flex-grow">2024 Zalalaa.Com</p>
 <script src="//instant.page/5.2.0" type="module" integrity="sha384-jnZyxPjiipYXnSU0ygqeac2q7CVYMbh84q0uHVRRxEtvFPiQYbXWUorga2aqZJ0z"></script>  
 </div>
 </body>
