--- a/q/video/index.html
+++ b/q/video/index.html
@@ -16,10 +16,10 @@
 </head>
 <body>
 <div class="navbar shadow" id="navbar">
-  <a class="navbar-logo size-big" href="https://zalalaa.com"><img src="/q/logo.webp" alt="Arts, Crafts &amp; Sewing" height="40" class="margin" />Zalalaa.com</a>
+  <a class="navbar-logo size-big" href="/"><img src="/q/logo.webp" alt="Arts, Crafts &amp; Sewing" height="40" class="margin" />Zalalaa.com</a>
   <div class="navbar-body" id="navbody">
     <ul class="nav">
-      <li><a href="https://zalalaa.com" title="Home">Home</a></li>
+      <li><a href="/" title="Home">Home</a></li>
       <li><a href="/q/abouts/" title="About Us">About Us</a></li>
       <li><a href="/q/patches/" title="Applique Patches">Applique Patches</a></li>
       <li><a href="/q/article/" title="Blog">Blog</a></li>
@@ -61,7 +61,7 @@
   
 
 <div class="layout padding-top-large padding-bottom-large padding-left padding-right">
-  <p class="size-small text-gray flex-grow">2024 Zalalaa.Com</p>
+ <p class="size-small text-gray flex-grow">2024 Zalalaa.Com</p>
 <script src="//instant.page/5.2.0" type="module" integrity="sha384-jnZyxPjiipYXnSU0ygqeac2q7CVYMbh84q0uHVRRxEtvFPiQYbXWUorga2aqZJ0z"></script>  
 </div>
 </body>
