--- a/q/animal/index.html
+++ b/q/animal/index.html
@@ -9,22 +9,22 @@
 <meta name="keywords" content="Embroidery stickers,Embroidery,cross-stitch,needlework,needlepoint,fancywork">
 <meta name="description" content="Hand sewn embroidery, three-dimensional embroidery, animal cloth stickers, hand nailed flower embroidery badges, cheongsam animals">
 <meta name="theme-color" content="#32CD32">
-<link rel="stylesheet" href="/q/p.min.css">
-<link rel="stylesheet" href="/q/p.css">
-<script src="/q/j.min.js"></script>
-<script src="/q/pj.min.js"></script>
+<link rel="stylesheet" href="https://c.zalalaa.com/q/p.min.css">
+<link rel="stylesheet" href="https://c.zalalaa.com/q/p.css">
+<script src="https://c.zalalaa.com/q/j.min.js"></script>
+<script src="https://c.zalalaa.com/q/pj.min.js"></script>
 </head>
 <body>
 <div class="navbar shadow" id="navbar">
-  <a class="navbar-logo size-big" href="/"><img src="/q/logo.webp" alt="Arts, Crafts &amp; Sewing" height="40" class="margin" />Zalalaa.com</a>
+  <a class="navbar-logo size-big" href="/index.html"><img src="https://c.zalalaa.com/q/logo.webp" alt="Arts, Crafts &amp; Sewing" height="40" class="margin" />Zalalaa.com</a>
   <div class="navbar-body" id="navbody">
     <ul class="nav">
-      <li><a href="/" title="Home">Home</a></li>
-      <li><a href="/q/abouts/" title="About Us">About Us</a></li>
-      <li><a href="/q/patches/" title="Applique Patches">Applique Patches</a></li>
-      <li><a href="/q/article/" title="Blog">Blog</a></li>
-      <li><a href="/q/video/" title="Video">Video</a></li>
-      <li><a href="/q/contact/" title="Contact Us">Contact Us</a></li>
+      <li><a href="/index.html" title="Home">Home</a></li>
+      <li><a href="/q/abouts/index.html" title="About Us">About Us</a></li>
+      <li><a href="/q/patches/index.html" title="Applique Patches">Applique Patches</a></li>
+      <li><a href="/q/article/index.html" title="Blog">Blog</a></li>
+      <li><a href="/q/video/index.html" title="Video">Video</a></li>
+      <li><a href="/q/contact/index.html" title="Contact Us">Contact Us</a></li>
     </ul>
   </div>
   <ul class="nav nav-switch size-mini" data-navswitch="#navbody"><li></li><li></li><li></li></ul>
@@ -40,7 +40,7 @@
 <br />
 <div class="layout grid-middle big-grid-middle large-grid-large isplit-full scrollto">
     <div class="grid">
-       <div class="big-x2 small-x6"><a href="/q/animal/" title="Animal">Animal <span class="badge">2</span></a></div> <div class="big-x2 small-x6"><a href="/q/flower/" title="Flower">Flower <span class="badge">15</span></a></div> 
+       <div class="big-x2 small-x6"><a href="/q/animal/index.html" title="Animal">Animal <span class="badge">2</span></a></div> <div class="big-x2 small-x6"><a href="/q/flower/index.html" title="Flower">Flower <span class="badge">15</span></a></div> 
     </div>
 </div>
 <div class="layout grid-middle big-grid-middle large-grid-large isplit-full scrollto">
@@ -73,8 +73,7 @@
 </div>
 
 <div class="layout padding-top-large padding-bottom-large padding-left padding-right">
- <p class="size-small text-gray flex-grow">2024 Zalalaa.Com</p>
-<script src="//instant.page/5.2.0" type="module" integrity="sha384-jnZyxPjiipYXnSU0ygqeac2q7CVYMbh84q0uHVRRxEtvFPiQYbXWUorga2aqZJ0z"></script>  
+ <p class="size-small text-gray flex-grow">2024 Zalalaa.Com</p> 
 </div>
 </body>
 </html>
