--- a/q/10.html
+++ b/q/10.html
@@ -6,7 +6,6 @@
 <meta http-equiv="X-UA-Compatible" content="IE=edge">
 <meta name="renderer" content="webkit">
 <title>Embroidered clothing accessories, embroidered lace fabric, ethnic peony-colored flower patches, water-soluble cheongsam accessories-Flower-Arts, Crafts &amp; Sewing-zlalaa</title>
-<meta name="keywords" content="Embroidery stickers,Embroidery,cross-stitch,needlework,needlepoint,fancywork">
 <meta name="description" content="Embroidered clothing accessories, embroidered lace fabric, ethnic peony-colored flower patches, water-soluble cheongsam accessories">
 <meta name="theme-color" content="#32CD32">
 <meta property="og:type" content="product"/>
@@ -14,22 +13,22 @@
 <meta property="og:title" content="Embroidered clothing accessories, embroidered lace fabric, ethnic peony-colored flower patches, water-soluble cheongsam accessories"/>
 <meta property="og:description" content="Embroidered clothing accessories, embroidered lace fabric, ethnic peony-colored flower patches, water-soluble cheongsam accessories"/>
 <meta property="og:product:price" content="12.99"/>
-<link rel="stylesheet" href="/q/p.min.css">
-<link rel="stylesheet" href="/q/p.css">
-<script src="/q/j.min.js"></script>
-<script src="/q/pj.min.js"></script>
+<link rel="stylesheet" href="https://c.zalalaa.com/q/p.min.css">
+<link rel="stylesheet" href="https://c.zalalaa.com/q/p.css">
+<script src="https://c.zalalaa.com/q/j.min.js"></script>
+<script src="https://c.zalalaa.com/q/pj.min.js"></script>
 </head>
 <body>
 <div class="navbar shadow" id="navbar">
-  <a class="navbar-logo size-big" href="/"><img src="/q/logo.webp" alt="Arts, Crafts &amp; Sewing" height="40" class="margin" />Zalalaa.com</a>
+  <a class="navbar-logo size-big" href="/index.html"><img src="https://c.zalalaa.com/q/logo.webp" alt="Arts, Crafts &amp; Sewing" height="40" class="margin" />Zalalaa.com</a>
   <div class="navbar-body" id="navbody">
     <ul class="nav">
-      <li><a href="/" title="Home">Home</a></li>
-      <li><a href="/q/abouts/" title="About Us">About Us</a></li>
-      <li><a href="/q/patches/" title="Applique Patches">Applique Patches</a></li>
-      <li><a href="/q/article/" title="Blog">Blog</a></li>
-      <li><a href="/q/video/" title="Video">Video</a></li>
-      <li><a href="/q/contact/" title="Contact Us">Contact Us</a></li>
+      <li><a href="/index.html" title="Home">Home</a></li>
+      <li><a href="/q/abouts/index.html" title="About Us">About Us</a></li>
+      <li><a href="/q/patches/index.html" title="Applique Patches">Applique Patches</a></li>
+      <li><a href="/q/article/index.html" title="Blog">Blog</a></li>
+      <li><a href="/q/video/index.html" title="Video">Video</a></li>
+      <li><a href="/q/contact/index.html" title="Contact Us">Contact Us</a></li>
     </ul>
   </div>
   <ul class="nav nav-switch size-mini" data-navswitch="#navbody"><li></li><li></li><li></li></ul>
@@ -43,7 +42,6 @@
   })
 </script>
 <br />
-
 <div class="layout grid-middle big-grid-middle large-grid-large isplit-full scrollto">
   <h1 class="margin-bottom weight" align="center">Embroidered clothing accessories, embroidered lace fabric, ethnic peony-colored flower patches, water-soluble cheongsam accessories</h1>
   <p align="center"></p>
@@ -52,9 +50,8 @@
     <span class="text-danger size-large">&#9733;</span>
     <span class="text-danger size-large">&#9733;</span>
     <span class="text-danger size-large">&#9733;</span></p>
-  
   <ul class="bread">
-     <a href="/"><i class="icon-home"></i></a> <i class="icon-arrow-right"></i> <a href="/q/patches/">Applique Patches</a> <i class="icon-arrow-right"></i> <a href="/q/flower/">Flower</a> <i class="icon-arrow-right"></i> <a href="/q/10.html">Embroidered clothing accessories, embroidered lace fabric, ethnic peony-colored flower patches, water-soluble cheongsam accessories</a>
+    <a href="/index.html"><i class="icon-home"></i></a> <i class="icon-arrow-right"></i> <a href="/q/patches/index.html">Applique Patches</a> <i class="icon-arrow-right"></i> <a href="/q/flower/index.html">Flower</a> <i class="icon-arrow-right"></i> <a href="/q/10.html">Embroidered clothing accessories, embroidered lace fabric, ethnic peony-colored flower patches, water-soluble cheongsam accessories</a>
      </ul> 
     <div class="grid big-grid-middle large-grid-large isplit-content">
     <div class="big-x4">
@@ -73,86 +70,86 @@
 	<h3 class="margin-bottom weight" align="center">Embroidered clothing accessories, embroidered lace fabric, ethnic peony-colored flower patches, water-soluble cheongsam accessories<sup class="badge">$:12.99</sup></h3>
         <time>2024-07-01</time>
 		<p>Number: A10</p> 
-		<p><a class="padding block" href="" target="_blank"> <img src="/q/py.webp" alt="Embroidered clothing accessories, embroidered lace fabric, ethnic peony-colored flower patches, water-soluble cheongsam accessories" /> Buy Now <span class="text-danger">&#36;</span>:12.99</sup></a><img src="/q/a.webp" alt="Embroidered clothing accessories, embroidered lace fabric, ethnic peony-colored flower patches, water-soluble cheongsam accessories"/></p>
+		<p><a class="padding block" href="" target="_blank"> <img src="https://c.zalalaa.com/q/py.webp" alt="Embroidered clothing accessories, embroidered lace fabric, ethnic peony-colored flower patches, water-soluble cheongsam accessories" /> Buy Now <span class="text-danger">&#36;</span>:12.99</sup></a><img src="https://c.zalalaa.com/q/a.webp" alt="Embroidered clothing accessories, embroidered lace fabric, ethnic peony-colored flower patches, water-soluble cheongsam accessories"/></p>
   <p>Embroidered clothing accessories, embroidered lace fabric, ethnic peony-colored flower patches, water-soluble cheongsam accessories</p>
   </div> 
   </div>
   <div class="grid big-grid-middle large-grid-large isplit-content">
 
     <div class="big-x12 grid discovers">
-      <a class="big-x6 flex flex-column" href="/q/upload/other/20240628/1719576587845466.webp">
+      <a class="big-x6 flex flex-column" href="https://c.zalalaa.com/q/upload/other/20240628/1719576587845466.webp">
         <div class="overflow-hidden margin-bottom relative effect-hover">
-          <figure class="figure figure-above radius-big"><img loading="lazy" src="/q/upload/other/20240628/1719576587845466.webp" alt="Flower" class="img-auto scale" /></figure>
+          <figure class="figure figure-above radius-big"><img loading="lazy" src="https://c.zalalaa.com/q/upload/other/20240628/1719576587845466.webp" alt="Flower" class="img-auto scale" /></figure>
           <div class="effect-content"><i class="icon-add text-main"></i></div>
         </div>
         <p class="flex-grow"></p>
       </a>
-      <a class="big-x6 flex flex-column" href="/q/upload/other/20240628/1719576606814069.webp">
+      <a class="big-x6 flex flex-column" href="https://c.zalalaa.com/q/upload/other/20240628/1719576606814069.webp">
         <div class="overflow-hidden margin-bottom relative effect-hover">
-          <figure class="figure figure-above radius-big"><img loading="lazy" src="/q/upload/other/20240628/1719576606814069.webp" alt="Flower" class="img-auto scale" /></figure>
+          <figure class="figure figure-above radius-big"><img loading="lazy" src="https://c.zalalaa.com/q/upload/other/20240628/1719576606814069.webp" alt="Flower" class="img-auto scale" /></figure>
           <div class="effect-content"><i class="icon-add text-main"></i></div>
         </div>
         <p class="flex-grow"></p>
       </a>
-      <a class="big-x6 flex flex-column" href="/q/upload/other/20240628/1719576609289037.webp">
+      <a class="big-x6 flex flex-column" href="https://c.zalalaa.com/q/upload/other/20240628/1719576609289037.webp">
         <div class="overflow-hidden margin-bottom relative effect-hover">
-          <figure class="figure figure-above radius-big"><img loading="lazy" src="/q/upload/other/20240628/1719576609289037.webp" alt="Flower" class="img-auto scale" /></figure>
+          <figure class="figure figure-above radius-big"><img loading="lazy" src="https://c.zalalaa.com/q/upload/other/20240628/1719576609289037.webp" alt="Flower" class="img-auto scale" /></figure>
           <div class="effect-content"><i class="icon-add text-main"></i></div>
         </div>
         <p class="flex-grow">S/N: A10-1</p>
       </a>
-      <a class="big-x6 flex flex-column" href="/q/upload/other/20240628/1719576631710830.webp">
+      <a class="big-x6 flex flex-column" href="https://c.zalalaa.com/q/upload/other/20240628/1719576631710830.webp">
         <div class="overflow-hidden margin-bottom relative effect-hover">
-          <figure class="figure figure-above radius-big"><img loading="lazy" src="/q/upload/other/20240628/1719576631710830.webp" alt="Flower" class="img-auto scale" /></figure>
+          <figure class="figure figure-above radius-big"><img loading="lazy" src="https://c.zalalaa.com/q/upload/other/20240628/1719576631710830.webp" alt="Flower" class="img-auto scale" /></figure>
           <div class="effect-content"><i class="icon-add text-main"></i></div>
         </div>
         <p class="flex-grow">S/N: A10-2</p>
       </a>
-      <a class="big-x6 flex flex-column" href="/q/upload/other/20240628/1719576633543829.webp">
+      <a class="big-x6 flex flex-column" href="https://c.zalalaa.com/q/upload/other/20240628/1719576633543829.webp">
         <div class="overflow-hidden margin-bottom relative effect-hover">
-          <figure class="figure figure-above radius-big"><img loading="lazy" src="/q/upload/other/20240628/1719576633543829.webp" alt="Flower" class="img-auto scale" /></figure>
+          <figure class="figure figure-above radius-big"><img loading="lazy" src="https://c.zalalaa.com/q/upload/other/20240628/1719576633543829.webp" alt="Flower" class="img-auto scale" /></figure>
           <div class="effect-content"><i class="icon-add text-main"></i></div>
         </div>
         <p class="flex-grow">S/N: A10-3</p>
       </a>
-      <a class="big-x6 flex flex-column" href="/q/upload/other/20240628/1719576635103873.webp">
+      <a class="big-x6 flex flex-column" href="https://c.zalalaa.com/q/upload/other/20240628/1719576635103873.webp">
         <div class="overflow-hidden margin-bottom relative effect-hover">
-          <figure class="figure figure-above radius-big"><img loading="lazy" src="/q/upload/other/20240628/1719576635103873.webp" alt="Flower" class="img-auto scale" /></figure>
+          <figure class="figure figure-above radius-big"><img loading="lazy" src="https://c.zalalaa.com/q/upload/other/20240628/1719576635103873.webp" alt="Flower" class="img-auto scale" /></figure>
           <div class="effect-content"><i class="icon-add text-main"></i></div>
         </div>
         <p class="flex-grow">S/N: A10-4</p>
       </a>
-      <a class="big-x6 flex flex-column" href="/q/upload/other/20240628/1719576645350825.webp">
+      <a class="big-x6 flex flex-column" href="https://c.zalalaa.com/q/upload/other/20240628/1719576645350825.webp">
         <div class="overflow-hidden margin-bottom relative effect-hover">
-          <figure class="figure figure-above radius-big"><img loading="lazy" src="/q/upload/other/20240628/1719576645350825.webp" alt="Flower" class="img-auto scale" /></figure>
+          <figure class="figure figure-above radius-big"><img loading="lazy" src="https://c.zalalaa.com/q/upload/other/20240628/1719576645350825.webp" alt="Flower" class="img-auto scale" /></figure>
           <div class="effect-content"><i class="icon-add text-main"></i></div>
         </div>
         <p class="flex-grow">S/N: A10-5</p>
       </a>
-      <a class="big-x6 flex flex-column" href="/q/upload/other/20240628/1719576648212779.webp">
+      <a class="big-x6 flex flex-column" href="https://c.zalalaa.com/q/upload/other/20240628/1719576648212779.webp">
         <div class="overflow-hidden margin-bottom relative effect-hover">
-          <figure class="figure figure-above radius-big"><img loading="lazy" src="/q/upload/other/20240628/1719576648212779.webp" alt="Flower" class="img-auto scale" /></figure>
+          <figure class="figure figure-above radius-big"><img loading="lazy" src="https://c.zalalaa.com/q/upload/other/20240628/1719576648212779.webp" alt="Flower" class="img-auto scale" /></figure>
           <div class="effect-content"><i class="icon-add text-main"></i></div>
         </div>
         <p class="flex-grow">S/N: A10-6</p>
       </a>
-      <a class="big-x6 flex flex-column" href="/q/upload/other/20240628/1719576652572016.webp">
+      <a class="big-x6 flex flex-column" href="https://c.zalalaa.com/q/upload/other/20240628/1719576652572016.webp">
         <div class="overflow-hidden margin-bottom relative effect-hover">
-          <figure class="figure figure-above radius-big"><img loading="lazy" src="/q/upload/other/20240628/1719576652572016.webp" alt="Flower" class="img-auto scale" /></figure>
+          <figure class="figure figure-above radius-big"><img loading="lazy" src="https://c.zalalaa.com/q/upload/other/20240628/1719576652572016.webp" alt="Flower" class="img-auto scale" /></figure>
           <div class="effect-content"><i class="icon-add text-main"></i></div>
         </div>
         <p class="flex-grow">S/N: A10-7</p>
       </a>
-      <a class="big-x6 flex flex-column" href="/q/upload/other/20240628/1719576656575737.webp">
+      <a class="big-x6 flex flex-column" href="https://c.zalalaa.com/q/upload/other/20240628/1719576656575737.webp">
         <div class="overflow-hidden margin-bottom relative effect-hover">
-          <figure class="figure figure-above radius-big"><img loading="lazy" src="/q/upload/other/20240628/1719576656575737.webp" alt="Flower" class="img-auto scale" /></figure>
+          <figure class="figure figure-above radius-big"><img loading="lazy" src="https://c.zalalaa.com/q/upload/other/20240628/1719576656575737.webp" alt="Flower" class="img-auto scale" /></figure>
           <div class="effect-content"><i class="icon-add text-main"></i></div>
         </div>
         <p class="flex-grow">S/N: A10-8</p>
       </a>
-      <a class="big-x6 flex flex-column" href="/q/upload/other/20240628/1719576659935990.webp">
+      <a class="big-x6 flex flex-column" href="https://c.zalalaa.com/q/upload/other/20240628/1719576659935990.webp">
         <div class="overflow-hidden margin-bottom relative effect-hover">
-          <figure class="figure figure-above radius-big"><img loading="lazy" src="/q/upload/other/20240628/1719576659935990.webp" alt="Flower" class="img-auto scale" /></figure>
+          <figure class="figure figure-above radius-big"><img loading="lazy" src="https://c.zalalaa.com/q/upload/other/20240628/1719576659935990.webp" alt="Flower" class="img-auto scale" /></figure>
           <div class="effect-content"><i class="icon-add text-main"></i></div>
         </div>
         <p class="flex-grow"></p>
@@ -166,23 +163,21 @@
       <div class="grid">
         <div class="small-x2">
           <div class="card">
-            <img loading="lazy" src="/q/upload/other/20240630/1719759794881169.webp" class="card-media card-overflow" />
+            <img loading="lazy" src="https://c.zalalaa.com/q/upload/other/20240630/1719759794881169.webp" class="card-media card-overflow" />
             <div class="card-body"><a class="button bg-main" href="/q/10.html" title="Embroidered clothing accessories, embroidered lace fabric, ethnic peony-colored flower patches, water-soluble cheongsam accessories,2024-07-01 11:51:48">Read More</a></div>
           </div>
         </div>
         <div class="small-x2">
           <div class="card">
-            <img loading="lazy" src="/q/upload/other/20240701/1719794420979065.webp" class="card-media card-overflow" />
+            <img loading="lazy" src="https://c.zalalaa.com/q/upload/other/20240701/1719794420979065.webp" class="card-media card-overflow" />
             <div class="card-body"><a class="button bg-main" href="/q/15.html" title="Embroidered water-soluble lace fabric, hand-sewn cheongsam, subsidy for heavy embroidery work, ethnic peony flowers available for immediate delivery,2024-06-30 08:38:13">Read More</a></div>
           </div>
         </div>
         
       </div>
     </div>
-  
 <div class="layout padding-top-large padding-bottom-large padding-left padding-right">
- <p class="size-small text-gray flex-grow">2024 Zalalaa.Com</p>
-<script src="//instant.page/5.2.0" type="module" integrity="sha384-jnZyxPjiipYXnSU0ygqeac2q7CVYMbh84q0uHVRRxEtvFPiQYbXWUorga2aqZJ0z"></script>  
+ <p class="size-small text-gray flex-grow">2024 Zalalaa.Com</p> 
 </div>
 </body>
 </html>
