--- a/q/21.html
+++ b/q/21.html
@@ -6,7 +6,6 @@
 <meta http-equiv="X-UA-Compatible" content="IE=edge">
 <meta name="renderer" content="webkit">
 <title>Tiger head Embroiderye sticker-Animal-Arts, Crafts &amp; Sewing-zlalaa</title>
-<meta name="keywords" content="Embroidery stickers,Embroidery,cross-stitch,needlework,needlepoint,fancywork">
 <meta name="description" content="Tiger head embroidery sticker">
 <meta name="theme-color" content="#32CD32">
 <meta property="og:type" content="product"/>
@@ -14,22 +13,22 @@
 <meta property="og:title" content="Tiger head Embroiderye sticker"/>
 <meta property="og:description" content="Tiger head embroidery sticker"/>
 <meta property="og:product:price" content="12"/>
-<link rel="stylesheet" href="/q/p.min.css">
-<link rel="stylesheet" href="/q/p.css">
-<script src="/q/j.min.js"></script>
-<script src="/q/pj.min.js"></script>
+<link rel="stylesheet" href="https://c.zalalaa.com/q/p.min.css">
+<link rel="stylesheet" href="https://c.zalalaa.com/q/p.css">
+<script src="https://c.zalalaa.com/q/j.min.js"></script>
+<script src="https://c.zalalaa.com/q/pj.min.js"></script>
 </head>
 <body>
 <div class="navbar shadow" id="navbar">
-  <a class="navbar-logo size-big" href="/"><img src="/q/logo.webp" alt="Arts, Crafts &amp; Sewing" height="40" class="margin" />Zalalaa.com</a>
+  <a class="navbar-logo size-big" href="/index.html"><img src="https://c.zalalaa.com/q/logo.webp" alt="Arts, Crafts &amp; Sewing" height="40" class="margin" />Zalalaa.com</a>
   <div class="navbar-body" id="navbody">
     <ul class="nav">
-      <li><a href="/" title="Home">Home</a></li>
-      <li><a href="/q/abouts/" title="About Us">About Us</a></li>
-      <li><a href="/q/patches/" title="Applique Patches">Applique Patches</a></li>
-      <li><a href="/q/article/" title="Blog">Blog</a></li>
-      <li><a href="/q/video/" title="Video">Video</a></li>
-      <li><a href="/q/contact/" title="Contact Us">Contact Us</a></li>
+      <li><a href="/index.html" title="Home">Home</a></li>
+      <li><a href="/q/abouts/index.html" title="About Us">About Us</a></li>
+      <li><a href="/q/patches/index.html" title="Applique Patches">Applique Patches</a></li>
+      <li><a href="/q/article/index.html" title="Blog">Blog</a></li>
+      <li><a href="/q/video/index.html" title="Video">Video</a></li>
+      <li><a href="/q/contact/index.html" title="Contact Us">Contact Us</a></li>
     </ul>
   </div>
   <ul class="nav nav-switch size-mini" data-navswitch="#navbody"><li></li><li></li><li></li></ul>
@@ -43,7 +42,6 @@
   })
 </script>
 <br />
-
 <div class="layout grid-middle big-grid-middle large-grid-large isplit-full scrollto">
   <h1 class="margin-bottom weight" align="center">Tiger head Embroiderye sticker</h1>
   <p align="center"></p>
@@ -52,9 +50,8 @@
     <span class="text-danger size-large">&#9733;</span>
     <span class="text-danger size-large">&#9733;</span>
     <span class="text-danger size-large">&#9733;</span></p>
-  
   <ul class="bread">
-     <a href="/"><i class="icon-home"></i></a> <i class="icon-arrow-right"></i> <a href="/q/patches/">Applique Patches</a> <i class="icon-arrow-right"></i> <a href="/q/animal/">Animal</a> <i class="icon-arrow-right"></i> <a href="/q/21.html">Tiger head Embroiderye sticker</a>
+    <a href="/index.html"><i class="icon-home"></i></a> <i class="icon-arrow-right"></i> <a href="/q/patches/index.html">Applique Patches</a> <i class="icon-arrow-right"></i> <a href="/q/animal/index.html">Animal</a> <i class="icon-arrow-right"></i> <a href="/q/21.html">Tiger head Embroiderye sticker</a>
      </ul> 
     <div class="grid big-grid-middle large-grid-large isplit-content">
     <div class="big-x4">
@@ -73,37 +70,37 @@
 	<h3 class="margin-bottom weight" align="center">Tiger head Embroiderye sticker<sup class="badge">$:12</sup></h3>
         <time>2024-06-02</time>
 		<p>Number: A21</p> 
-		<p><a class="padding block" href="https://www.paypal.com/ncp/payment/6VZM27GTQTRNJ" target="_blank"> <img src="/q/py.webp" alt="Tiger head Embroiderye sticker" /> Buy Now <span class="text-danger">&#36;</span>:12</sup></a><img src="/q/a.webp" alt="Tiger head Embroiderye sticker"/></p>
+		<p><a class="padding block" href="https://www.paypal.com/ncp/payment/6VZM27GTQTRNJ" target="_blank"> <img src="https://c.zalalaa.com/q/py.webp" alt="Tiger head Embroiderye sticker" /> Buy Now <span class="text-danger">&#36;</span>:12</sup></a><img src="https://c.zalalaa.com/q/a.webp" alt="Tiger head Embroiderye sticker"/></p>
   <p>Tiger head embroidery sticker &nbsp;<br/></p>
   </div> 
   </div>
   <div class="grid big-grid-middle large-grid-large isplit-content">
 
     <div class="big-x12 grid discovers">
-      <a class="big-x6 flex flex-column" href="/q/upload/other/20240626/1719390626901068.webp">
+      <a class="big-x6 flex flex-column" href="https://c.zalalaa.com/q/upload/other/20240626/1719390626901068.webp">
         <div class="overflow-hidden margin-bottom relative effect-hover">
-          <figure class="figure figure-above radius-big"><img loading="lazy" src="/q/upload/other/20240626/1719390626901068.webp" alt="Animal" class="img-auto scale" /></figure>
+          <figure class="figure figure-above radius-big"><img loading="lazy" src="https://c.zalalaa.com/q/upload/other/20240626/1719390626901068.webp" alt="Animal" class="img-auto scale" /></figure>
           <div class="effect-content"><i class="icon-add text-main"></i></div>
         </div>
         <p class="flex-grow">Tiger head embroidery sticker</p>
       </a>
-      <a class="big-x6 flex flex-column" href="/q/upload/other/20240626/1719390553546646.webp">
+      <a class="big-x6 flex flex-column" href="https://c.zalalaa.com/q/upload/other/20240626/1719390553546646.webp">
         <div class="overflow-hidden margin-bottom relative effect-hover">
-          <figure class="figure figure-above radius-big"><img loading="lazy" src="/q/upload/other/20240626/1719390553546646.webp" alt="Animal" class="img-auto scale" /></figure>
+          <figure class="figure figure-above radius-big"><img loading="lazy" src="https://c.zalalaa.com/q/upload/other/20240626/1719390553546646.webp" alt="Animal" class="img-auto scale" /></figure>
           <div class="effect-content"><i class="icon-add text-main"></i></div>
         </div>
         <p class="flex-grow">Tiger head embroidery sticker</p>
       </a>
-      <a class="big-x6 flex flex-column" href="/q/upload/other/20240626/1719390553323341.webp">
+      <a class="big-x6 flex flex-column" href="https://c.zalalaa.com/q/upload/other/20240626/1719390553323341.webp">
         <div class="overflow-hidden margin-bottom relative effect-hover">
-          <figure class="figure figure-above radius-big"><img loading="lazy" src="/q/upload/other/20240626/1719390553323341.webp" alt="Animal" class="img-auto scale" /></figure>
+          <figure class="figure figure-above radius-big"><img loading="lazy" src="https://c.zalalaa.com/q/upload/other/20240626/1719390553323341.webp" alt="Animal" class="img-auto scale" /></figure>
           <div class="effect-content"><i class="icon-add text-main"></i></div>
         </div>
         <p class="flex-grow">Tiger head embroidery sticker</p>
       </a>
-      <a class="big-x6 flex flex-column" href="/q/upload/other/20240626/1719390553865054.webp">
+      <a class="big-x6 flex flex-column" href="https://c.zalalaa.com/q/upload/other/20240626/1719390553865054.webp">
         <div class="overflow-hidden margin-bottom relative effect-hover">
-          <figure class="figure figure-above radius-big"><img loading="lazy" src="/q/upload/other/20240626/1719390553865054.webp" alt="Animal" class="img-auto scale" /></figure>
+          <figure class="figure figure-above radius-big"><img loading="lazy" src="https://c.zalalaa.com/q/upload/other/20240626/1719390553865054.webp" alt="Animal" class="img-auto scale" /></figure>
           <div class="effect-content"><i class="icon-add text-main"></i></div>
         </div>
         <p class="flex-grow"></p>
@@ -117,17 +114,15 @@
       <div class="grid">
         <div class="small-x2">
           <div class="card">
-            <img loading="lazy" src="/q/upload/other/20240701/1719800607934008.webp" class="card-media card-overflow" />
+            <img loading="lazy" src="https://c.zalalaa.com/q/upload/other/20240701/1719800607934008.webp" class="card-media card-overflow" />
             <div class="card-body"><a class="button bg-main" href="/q/21.html" title="Tiger head Embroiderye sticker,2024-06-02 18:42:38">Read More</a></div>
           </div>
         </div>
         
       </div>
     </div>
-  
 <div class="layout padding-top-large padding-bottom-large padding-left padding-right">
- <p class="size-small text-gray flex-grow">2024 Zalalaa.Com</p>
-<script src="//instant.page/5.2.0" type="module" integrity="sha384-jnZyxPjiipYXnSU0ygqeac2q7CVYMbh84q0uHVRRxEtvFPiQYbXWUorga2aqZJ0z"></script>  
+ <p class="size-small text-gray flex-grow">2024 Zalalaa.Com</p> 
 </div>
 </body>
 </html>
